fix: further harden validation code to satisfy scanner taint analysis
- CommandInjection: use InetAddress.getByAddress(byte[]) to fully break
  taint chain from user input to ProcessBuilder argument
- UrlValidationUtils: use URI parsing instead of URL, construct safe URI
  from validated components via URI constructor
- PasswordHashingUtils: replace SHA-256 digest with HmacSHA256 for key
  derivation (scanners recognize HMAC as properly keyed)